DailySST/v2/logs/sst_fetch_2026-04-10.log
  File "/home/runner/work/SSTv2/SSTv2/sst_data_fetcher.py", line 167
    resp = requests.get(catalog_url, timeout=30)
    ^^^^
SyntaxError: expected 'except' or 'finally' block
